--- a/bookmarklets.html
+++ b/bookmarklets.html
@@ -8,7 +8,7 @@
 <body>
 <h1>Bookmarklets</h1>
 <p>Drag the link to your bookmarks bar, then click the bookmark to run.</p>
-<p><b><a href="http://scratch.mit.edu/discuss/topic/91622/" target="_blank">High Quality Sounds</a> loader: </b>
-<a title="Load HQS into Scratch" href="javascript:void((function(){ScratchExtensions.loadExternalJS('https://cdn.rawgit.com/MegaApuTurkUltra/Scratch-HQ-Sound/c9bc589fd176ba6f466b1d3141eb67370dfc0a0f/scratch-hqs.ext.js');})());">Drag me</a>
+<p><b><a href="http://scratch.mit.edu/discuss/topic/91622/" target="_blank">High Quality Sounds</a> loader: </b><br/>
+Drag this: <a title="Load HQS into Scratch" href="javascript:void((function(){ScratchExtensions.loadExternalJS('https://cdn.rawgit.com/MegaApuTurkUltra/Scratch-HQ-Sound/c9bc589fd176ba6f466b1d3141eb67370dfc0a0f/scratch-hqs.ext.js');})());">Load HQS into Scratch</a>
 </body>
 </html>
