--- a/index.html
+++ b/index.html
@@ -16,9 +16,20 @@ box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);}
 </style>
 </head>
 <body>
-<img src="http://i.cubeupload.com/oFOyir.png" alt="MegaApuTurkUltra logo" />
-<h1>MegaApuTurkUltra</h1>
-<br/><br/>
-<p><a href="http://scratch.mit.edu/users/MegaApuTurkUltra">Scratch</a> | <a href="https://github.com/MegaApuTurkUltra">GitHub</a> | <a href="http://soundcloud.com/apubeats/">Soundcloud</a></p>
+<img id="load" src="http://i.cubeupload.com/3PG6GQ.gif" />
+<div id="main" style="display:none">
+  <img id="bg" src="http://i.cubeupload.com/oFOyir.png" alt="MegaApuTurkUltra logo" />
+  <h1>MegaApuTurkUltra</h1>
+  <br/><br/>
+  <p><a href="http://scratch.mit.edu/users/MegaApuTurkUltra">Scratch</a> | <a href="https://github.com/MegaApuTurkUltra">GitHub</a> | <a href="http://soundcloud.com/apubeats/">Soundcloud</a></p>
+</div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script>
+  $("img#bg").on("load", function(){
+    $("img#load").fadeOut(700, function(){
+      $("div#main").fadeIn();
+    });
+  });
+</script>
 </body>
 </html>
