--- a/index.html
+++ b/index.html
@@ -9,18 +9,13 @@
 body { background: black; color: white; text-align: center; font-family: 'Audiowide', cursive; }
 body, html { padding: 0; margin: 0; height: 100%; text-shadow: 0px 0px 10px white; }
 img { margin-top: 1em; }
-a { color: white; text-decoration: underline; }
+a { color: white; text-decoration: underline; transition: all 0.2s; }
 a:hover { font-weight: bold; }
 h1, p { margin: 0; position: relative; top: -200px; background: rgba(0, 0, 0, 0.5); border-radius: 10px; padding: 1em; 
 box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);}
 div#main { perspective: 800px; }
-img#bg {
-    transition: all 1s;
-}
-img#bg.flip {
-  transform: scale(2) rotateY(360deg);
-  opacity: 0;
-}
+img#bg { transition: all 1s; }
+img#bg.flip { transform: scale(2) rotateY(360deg); opacity: 0; }
 </style>
 </head>
 <body>
