--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link rel="shortcut icon" href="http://i.cubeupload.com/oFOyir.png" />
 <link href='http://fonts.googleapis.com/css?family=Audiowide' rel='stylesheet' type='text/css'>
 <style type="text/css">
-body { background: black; color: white; text-align: center; font-family: 'Audiowide', cursive; }
+body { background: black; color: white; text-align: center; font-family: 'Audiowide', cursive; overflow: hidden; }
 body, html { padding: 0; margin: 0; height: 100%; text-shadow: 0px 0px 10px white; }
 img { margin-top: 1em; }
 a { color: white; text-decoration: underline; transition: all 0.2s; }
