--- a/ScratchTools/visualizer/index.html
+++ b/ScratchTools/visualizer/index.html
@@ -6,6 +6,8 @@ Select an audio file: <input type="file" id="inputFile" accept="audio/*" /><br/>
 <progress id="progressBar" max="100" value="0"></progress>
 <p id="status"></p>
 
+Note: Keep this browser tab focused while it's running. Otherwise there will be a lot of missing data.
+
 <script src="jszip.min.js"></script>
 <script src="jszip-utils.min.js"></script>
 <script src="VisualizerGen.js"></script>
