--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 body { background: black; color: white; text-align: center; font-family: 'Audiowide', cursive; overflow: hidden; }
 body, html { padding: 0; margin: 0; height: 100%; text-shadow: 0px 0px 10px white; }
 img { margin-top: 1em; }
-a { color: white; text-decoration: underline; transition: all 0.2s; }
-a:hover { font-weight: bold; }
+a { color: white; text-decoration: underline; transition: all 0.5s cubic-bezier(0, 1.8, 1, 1.8); }
+a:hover { font-weight: bold; font-size: 1.1em; }
 h1, p { margin: 0; position: relative; top: -200px; background: rgba(0, 0, 0, 0.5); border-radius: 10px; padding: 1em; 
 box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);}
 div#main { perspective: 800px; }
