--- a/index.html
+++ b/index.html
@@ -11,12 +11,24 @@ body, html { padding: 0; margin: 0; height: 100%; text-shadow: 0px 0px 10px whit
 img { margin-top: 1em; }
 a { color: white; text-decoration: underline; transition: all 0.4s cubic-bezier(0, 1.8, 1, 1.8); }
 a:hover { font-weight: bold; font-size: 1.3em; }
-a:hover + a { font-size: 1.1em; }
 h1, p { margin: 0; position: relative; top: -200px; background: rgba(0, 0, 0, 0.5); border-radius: 10px; padding: 1em; 
 box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);}
 div#main { perspective: 800px; }
 img#bg { transition: all 1s; }
 img#bg.flip { transform: scale(2) rotateY(360deg); opacity: 0; }
+
+div.link {
+	display: inline-block;
+	width: 100px;
+	text-align: center;
+	height: 40px;
+}
+
+div.link a {
+	display: block;
+	margin-top: 50%;
+	transform: translateY(-50%);
+}
 </style>
 </head>
 <body>
@@ -25,7 +37,11 @@ img#bg.flip { transform: scale(2) rotateY(360deg); opacity: 0; }
   <img id="bg" class="flip" src="http://i.cubeupload.com/oFOyir.png" alt="MegaApuTurkUltra logo" />
   <h1>MegaApuTurkUltra</h1>
   <br/><br/>
-  <p><a href="http://scratch.mit.edu/users/MegaApuTurkUltra">Scratch</a> | <a href="https://github.com/MegaApuTurkUltra">GitHub</a> | <a href="http://soundcloud.com/apubeats/">Soundcloud</a></p>
+  <p>
+    <div class='link'></div><a href="http://scratch.mit.edu/users/MegaApuTurkUltra">Scratch</a></div>
+    <div class='link'><a href="https://github.com/MegaApuTurkUltra">GitHub</a></div>
+    <div class='link'><a href="http://soundcloud.com/apubeats/">Soundcloud</a></div>
+  </p>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script>
