--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ div.link a {
   <h1>MegaApuTurkUltra</h1>
   <br/><br/>
   <p>
-    <div class='link'></div><a href="http://scratch.mit.edu/users/MegaApuTurkUltra">Scratch</a></div>
+    <div class='link'><a href="http://scratch.mit.edu/users/MegaApuTurkUltra">Scratch</a></div>
     <div class='link'><a href="https://github.com/MegaApuTurkUltra">GitHub</a></div>
     <div class='link'><a href="http://soundcloud.com/apubeats/">Soundcloud</a></div>
   </p>
