--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ body, html { padding: 0; margin: 0; height: 100%; text-shadow: 0px 0px 10px whit
 img { margin-top: 1em; }
 a { color: white; text-decoration: underline; transition: all 0.4s cubic-bezier(0, 1.8, 1, 1.8); }
 a:hover { font-weight: bold; font-size: 1.3em; }
-h1, p { margin: 0; position: relative; top: -200px; background: rgba(0, 0, 0, 0.5); border-radius: 10px; padding: 1em; 
+h1, div.row-bottom { margin: 0; position: relative; top: -200px; background: rgba(0, 0, 0, 0.5); border-radius: 10px; padding: 1em; 
 box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);}
 div#main { perspective: 800px; }
 img#bg { transition: all 1s; }
@@ -37,11 +37,11 @@ div.link a {
   <img id="bg" class="flip" src="http://i.cubeupload.com/oFOyir.png" alt="MegaApuTurkUltra logo" />
   <h1>MegaApuTurkUltra</h1>
   <br/><br/>
-  <p>
+  <div class='row-bottom'>
     <div class='link'><a href="http://scratch.mit.edu/users/MegaApuTurkUltra">Scratch</a></div>
     <div class='link'><a href="https://github.com/MegaApuTurkUltra">GitHub</a></div>
     <div class='link'><a href="http://soundcloud.com/apubeats/">Soundcloud</a></div>
-  </p>
+  </div>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script>
