--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ body { background: black; color: white; text-align: center; font-family: 'Audiow
 body, html { padding: 0; margin: 0; height: 100%; text-shadow: 0px 0px 10px white; }
 img { margin-top: 1em; }
 a { color: white; text-decoration: underline; transition: all 0.4s cubic-bezier(0, 1.8, 1, 1.8); }
-a:hover { font-weight: bold; font-size: 1.3em; }
+a:hover { font-weight: bold; font-size: 1.1em; }
 h1, div.row-bottom { margin: 0; position: relative; top: -200px; background: rgba(0, 0, 0, 0.5); border-radius: 10px; padding: 1em; 
 box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);}
 div#main { perspective: 800px; }
@@ -19,16 +19,13 @@ img#bg.flip { transform: scale(2) rotateY(360deg); opacity: 0; }
 
 div.link {
 	display: inline-block;
-	width: 100px;
+	width: 200px;
 	text-align: center;
-	height: 40px;
+	height: 60px;
+	line-height: 60px;
 }
 
-div.link a {
-	display: block;
-	margin-top: 50%;
-	transform: translateY(-50%);
-}
+div.row-bottom { padding: 0; }
 </style>
 </head>
 <body>
