--- a/index.html
+++ b/index.html
@@ -26,13 +26,17 @@ div.link {
 	vertical-align: top;
 }
 
+#load {
+	color: white;
+}
+
 div.row-bottom { padding: 0; }
 </style>
 </head>
 <body>
-<img id="load" src="http://i.cubeupload.com/3PG6GQ.gif" />
+<p id="load">Loading...</p>
 <div id="main" style="display:none">
-  <img id="bg" class="flip" src="http://i.cubeupload.com/oFOyir.png" alt="MegaApuTurkUltra logo" />
+  <img id="bg" class="flip" src="http://i61.tinypic.com/2qbhxc0.png" alt="MegaApuTurkUltra logo" />
   <h1>MegaApuTurkUltra</h1>
   <br/><br/>
   <div class='row-bottom'>
