--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ div.row-bottom { padding: 0; }
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script>
   $("img#bg").on("load", function(){
-    $("img#load").fadeOut(700, function(){
+    $("p#load").fadeOut(700, function(){
       $("div#main").fadeIn();
       $("img#bg").removeClass("flip");
     });
