--- a/404.html
+++ b/404.html
@@ -1,1 +1,10 @@
-Sorry this page does not exist =(
+---
+layout: page
+title: 404 
+header: Page not found
+group: navigation
+---
+{% include JB/setup %}
+
+<h2>404</h2>
+<p>Page not found</p>
