--- a/404.html
+++ b/404.html
@@ -16,28 +16,30 @@ group: navigation
 <script src="/assets/vendor/jekyll-search.min.js" type="text/javascript"></script>
 <script>
   var searchInput = document.getElementById('search-input');
-  searchInput.value = location.pathname.replace(/[\/\-]/g, " ");
+  searchInput.value = location.pathname.replace(/[\/\-]/g, " ").trim();
   SimpleJekyllSearch({
     searchInput: searchInput,
     resultsContainer: document.getElementById('results-container'),
     json: '/search.json',
   });
 
-  var event;
-
-  if (document.createEvent) {
-    event = document.createEvent("HTMLEvents");
-    event.initEvent("keyup", true, true);
-  } else {
-    event = document.createEventObject();
-    event.eventType = "keyup";
-  }
-
-  event.eventName = "keyup";
-
-  if (document.createEvent) {
-    searchInput.dispatchEvent(event);
-  } else {
-    searchInput.fireEvent("on" + event.eventType, event);
-  }
+  setTimeout(function(){
+    var event;
+  
+    if (document.createEvent) {
+      event = document.createEvent("HTMLEvents");
+      event.initEvent("keyup", true, true);
+    } else {
+      event = document.createEventObject();
+      event.eventType = "keyup";
+    }
+  
+    event.eventName = "keyup";
+  
+    if (document.createEvent) {
+      searchInput.dispatchEvent(event);
+    } else {
+      searchInput.fireEvent("on" + event.eventType, event);
+    }
+  }, 2000);
 </script>
