--- a/404.html
+++ b/404.html
@@ -9,7 +9,7 @@ group: navigation
 <p>Page not found</p>
 
 <div id="search-container">
-<input type="text" id="search-input" placeholder="Search" />
+<label for="search-input">Search:</label> <input type="text" id="search-input" placeholder="Search" />
 <ul id="results-container"></ul>
 </div>
 
